- Fix release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           fetch-depth: 10
 
       # once cloned, we just run the GitHub Action for the packager project
-      - name: Package and release
+      - name: Package and release for Classic
         uses: BigWigsMods/packager@master
         with:
-         args: -classic
+         args: -g classic
