--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,3 +43,9 @@ jobs:
         uses: BigWigsMods/packager@master
         with:
          args: -g classic
+
+      # once cloned, we just run the GitHub Action for the packager project
+      - name: Package and release for Burning Crusade Classic
+        uses: BigWigsMods/packager@master
+        with:
+         args: -g bcc
