--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,13 +39,13 @@ jobs:
           fetch-depth: 10
 
       # once cloned, we just run the GitHub Action for the packager project
-      - name: Package and release for Classic
+      - name: Package and release for Classic (both flavors)
         uses: BigWigsMods/packager@master
         with:
          args: -g classic
 
       # once cloned, we just run the GitHub Action for the packager project
-      - name: Package and release for Burning Crusade Classic
-        uses: BigWigsMods/packager@master
-        with:
-         args: -g bcc
+#      - name: Package and release for Burning Crusade Classic
+#        uses: BigWigsMods/packager@master
+#        with:
+#         args: -g bcc
