--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,12 @@ jobs:
       - name: Package and release for Burning Crusade Classic
         uses: BigWigsMods/packager@master
         with:
+          args: -g wrath
+ 
+      # once cloned, we just run the GitHub Action for the packager project
+      - name: Package and release for Burning Crusade Classic
+        uses: BigWigsMods/packager@master
+        with:
           args: -g bcc
  
       # once cloned, we just run the GitHub Action for the packager project
