Update for Cataclysm Classic

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,3 +50,8 @@ jobs:
         with:
           args: -g wrath
 
+      - name: Package and release for Cataclysm Classic
+        uses: BigWigsMods/packager@master
+        with:
+          args: -g cata
+
